--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
+  "homepage": "http://snawasth.github.io/confusion",
   "name": "confusion",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.0.0",
+    "gh-pages": "^1.2.0",
+    "npm": "^6.1.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-popper": "^0.9.2",
+    "react-scripts": "1.1.4",
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
